# Beryll_engine

./: CMakeLists.txt  README.md
docs/: PerformanceMetrics.txt  Troubleshooting.txt  plan.txt
docs/Requirements/: Shaders.txt  Textures.txt
docs/requirements/: Shaders.txt  Textures.txt
docs/requirements/gameObjects/: CollisionMeshNames.txt
libs/: LibsHeaders.h  list.txt
libs/SDL2_image/: CMakeLists.txt  SDL2_image.spec  version.rc
libs/SDL2_image/jpeg/: CMakeLists.txt
libs/SDL2_image/png/: CMakeLists.txt
libs/SDL2_mixer/: CMakeLists.txt
libs/SDL2_net/: CmakeLists.txt
libs/SDL3/: CMakeLists.txt
libs/SDL3_image/: CMakeLists.txt
libs/SDL3_image/jpeg/: CMakeLists.txt
libs/SDL3_image/libpng/: CMakeLists.txt
libs/SDL3_mixer/: CMakeLists.txt
libs/SDL3_mixer/src/: version.rc
libs/SDL3_net/: CmakeLists.txt
libs/assimp/: CMakeLists.txt
libs/assimp/code/: CMakeLists.txt
libs/bullet/: CMakeLists.txt  modifications.txt
libs/bullet/Bullet3Collision/BroadPhaseCollision/: b3OverlappingPairCache.h
libs/bullet/Bullet3OpenCL/NarrowphaseCollision/: b3ContactCache.cpp
libs/bullet/BulletCollision/BroadphaseCollision/: btAxisSweep3.cpp  btAxisSweep3Internal.h  btDbvt.cpp  btDbvt.h  btDbvtBroadphase.cpp  btOverlappingPairCache.cpp  btOverlappingPairCache.h  btQuantizedBvh.cpp  btQuantizedBvh.h  btSimpleBroadphase.cpp  btSimpleBroadphase.h
libs/bullet/BulletCollision/CollisionDispatch/: btBox2dBox2dCollisionAlgorithm.cpp  btBoxBoxDetector.cpp  btCollisionDispatcher.cpp  btCollisionDispatcher.h  btCollisionDispatcherMt.cpp  btCollisionDispatcherMt.h  btCollisionObject.h  (+14 more)
libs/bullet/BulletSoftBody/: btConjugateGradient.h  btConjugateResidual.h  btDeformableBodySolver.h  btDeformableContactConstraint.cpp  btDeformableContactProjection.cpp  btDeformableCorotatedForce.h  btDeformableGravityForce.h  btDeformableLinearElasticityForce.h  btDeformableMassSpringForce.h  btDeformableMultiBodyDynamicsWorld.cpp  btDeformableNeoHookeanForce.h  btKrylovSolver.h  btPreconditioner.h  btSoftBody.cpp  btSoftBodyConcaveCollisionAlgorithm.cpp  btSoftBodyHelpers.cpp  btSoftBodyInternals.h  btSoftMultiBodyDynamicsWorld.cpp  btSoftRigidDynamicsWorld.cpp
libs/bullet/LinearMath/: btAabbUtil2.h  btAlignedObjectArray.h  btConvexHull.cpp  btConvexHullComputer.cpp  btHashMap.h  btImplicitQRSVD.h  btMatrix3x3.h  btMatrixX.h  btPoolAllocator.h  btQuaternion.h  btQuickprof.cpp  btQuickprof.h  btScalar.h  btSerializer.h  btStackAlloc.h  btThreads.cpp  btThreads.h  btVector3.h
libs/glm/: modifications.txt
libs/glm/detail/: qualifier.hpp
libs/glm/gtx/: matrix_decompose.hpp
libs/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp
libs/sqlite/: CMakeLists.txt
src/: CppHeaders.h  EngineHeaders.h
src/Beryll/Async/: AsyncRun.h
src/Beryll/Core/: BeryllConstants.h  Constants.h  EventHandler.cpp  EventHandler.h  GameLoop.cpp  GameLoop.h  GameObject.h  GameState.h  GameStateMachine.cpp  Layer.h  LayerStack.cpp  Log.h  RandomGenerator.cpp  RandomGenerator.h  SoundsManager.cpp  SoundsManager.h  TimeStep.h  Timer.h  Window.cpp  Window.h
src/Beryll/GUI/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  DemoImGUI.cpp  DemoImGUI.h  GUIObject.h  MainImGUI.cpp  MainImGUI.h  Slider.cpp  Slider.h  Text.cpp  Text.h
src/Beryll/GameObjects/: AnimatedCollidingObject.cpp  AnimatedCollidingObject.h  AnimatedObject.cpp  AnimatedObject.h  BaseAnimatedObject.h  BaseSimpleObject.h  CollidingAnimatedObject.cpp  CollidingAnimatedObject.h  CollidingSimpleObject.cpp  CollidingSimpleObject.h  SceneObject.h  SimpleCollidingObject.cpp  SimpleCollidingObject.h  SimpleObject.cpp  SimpleObject.h  SkyBox.cpp  SkyBox.h
src/Beryll/LoadingScreen/: LoadingScreen.cpp  LoadingScreen.h
src/Beryll/ParticleSystem/: ParticleSystem.cpp  ParticleSystem.h
src/Beryll/Physics/: Physics.cpp  Physics.h
src/Beryll/Renderer/: Buffer.h  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.h  SkyBox.h  Texture.h
src/Beryll/Utils/: CommonUtils.h  File.h  Matrix.h  Quaternion.h
src/beryll/GUI/: Button.cpp  Button.h  ButtonWithText.cpp  ButtonWithText.h  ButtonWithTexture.cpp  ButtonWithTexture.h  CheckBox.cpp  CheckBox.h  DemoImGUI.h  GUIObject.h  GUITexture.cpp  GUITexture.h  Joystick.cpp  Joystick.h  MainImGUI.cpp  MainImGUI.h  ProgressBar.cpp  ProgressBar.h  Slider.cpp  Slider.h  SliderHorizontal.cpp  SliderHorizontal.h  SliderVertical.cpp  SliderVertical.h  Text.cpp  Text.h
src/beryll/Renderer/: Camera.h  Renderer.cpp  Renderer.h  Shader.h  SkyBox.h  Texture.h
src/beryll/Utils/: CommonUtils.h  File.h  Quaternion.h
src/beryll/ads/: Ads.cpp  Ads.h  modifications.txt
src/beryll/async/: AsyncRun.cpp  AsyncRun.h
src/beryll/billingSystem/: BillingSystem.cpp  BillingSystem.h  modifications.txt
src/beryll/core/: BeryllConstants.h  EventHandler.cpp  EventHandler.h  GameLoop.cpp  GameLoop.h  GameObject.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  RandomGenerator.h  SoundsManager.cpp  SoundsManager.h  TimeStep.cpp  TimeStep.h  Timer.h  Window.cpp  Window.h
src/beryll/dataBase/: DataBase.cpp  DataBase.h
src/beryll/gameObjects/: AnimatedCollidingObject.cpp  AnimatedCollidingObject.h  AnimatedObject.cpp  AnimatedObject.h  BaseAnimatedObject.cpp  BaseAnimatedObject.h  BaseSimpleObject.cpp  BaseSimpleObject.h  SceneObject.cpp  SceneObject.h  SimpleCollidingObject.cpp  SimpleCollidingObject.h  SimpleObject.cpp  SimpleObject.h
src/beryll/googleAnalytics/: GoogleAnalytics.cpp  GoogleAnalytics.h  modifications.txt
src/beryll/loadingScreen/: LoadingScreen.cpp  LoadingScreen.h
src/beryll/network/: Network.cpp  Network.h
src/beryll/particleSystem/: ParticleSystem.cpp  ParticleSystem.h
src/beryll/physics/: Physics.cpp  Physics.h
src/beryll/renderer/: Buffer.h  Camera.cpp  Camera.h  Material.h  Renderer.cpp  Renderer.h  Shader.h  ShadowMap.h  SkyBox.h  Texture.h  VertexArray.h  info.txt
src/beryll/textOnScene/: TextOnScene.cpp  TextOnScene.h
src/beryll/utils/: CommonUtils.cpp  CommonUtils.h  File.h  Matrix.h  Quaternion.h
(+167 files in other folders)
